Fixed issue - removed unused imports and replaced usage with toList()